tests/disabled-cases/patterns/multiple_invalid_binds.stderr
error[0020]: types mismatch, wanted `i32`, but got `(typeof(U_4), typeof(U_5))`
  --> $DIR/multiple_invalid_binds.hash:10:38
 9 |       // ~ERROR: variable ` b` not declared in all patterns
10 |       ((c, m) | (d, k), (a, b)) := (2, 1);    
   |                                        ^ this expects the type `i32`
11 |   }

  --> $DIR/multiple_invalid_binds.hash:10:6
 9 |       // ~ERROR: variable ` b` not declared in all patterns
10 |       ((c, m) | (d, k), (a, b)) := (2, 1);    
   |        ^^^^^^ ...but this is of type `(typeof(U_4), typeof(U_5))`
11 |   }
